--- a/Course-3 NLP/Week - 1.ipynb
+++ b/Course-3 NLP/Week - 1.ipynb
@@ -57,9 +57,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "{'<oov>': 1, 'hello': 2, 'world': 3, 'my': 4, 'name': 5, 'is': 6, 'nithin': 7}\n"
+     "output_type": "stream",
+     "text": [
+      "{'<oov>': 1, 'hello': 2, 'world': 3, 'my': 4, 'name': 5, 'is': 6, 'nithin': 7}\n"
+     ]
     }
    ],
    "source": [
@@ -83,9 +85,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "OrderedDict([('hello', 2), ('world', 2), ('my', 1), ('name', 1), ('is', 1), ('nithin', 1)])\n"
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('hello', 2), ('world', 2), ('my', 1), ('name', 1), ('is', 1), ('nithin', 1)])\n"
+     ]
     }
    ],
    "source": [
@@ -118,9 +122,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[[0 0 0 0 2 3]\n [2 3 4 5 6 7]]\n"
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 2 3]\n",
+      " [2 3 4 5 6 7]]\n"
+     ]
     }
    ],
    "source": [
@@ -145,9 +152,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[[2 3 0 0 0 0]\n [2 3 4 5 6 7]]\n"
+     "output_type": "stream",
+     "text": [
+      "[[2 3 0 0 0 0]\n",
+      " [2 3 4 5 6 7]]\n"
+     ]
     }
    ],
    "source": [
@@ -156,14 +166,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "!wget --no-check-certificate \\\n",
     "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/sarcasm.json \\\n",
-    "    -O /tmp/sarcasm.json\n",
-    "  \n",
+    "    -O /tmp/sarcasm.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/tmp/sarcasm.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-719237d4519b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/tmp/sarcasm.json\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mdatastore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/sarcasm.json'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "import json\n",
     "\n",
     "with open(\"/tmp/sarcasm.json\", 'r') as f:\n",
@@ -193,6 +240,13 @@
     "print(padded[0])\n",
     "print(padded.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
